# Xethium-Eng

./: .gitignore  CMakeLists.txt  LICENSE  build-all.bat  build-all.sh  clone-vendor.bat  cmake_install.cmake  eg  readme.md  run.sh
engine/: build.bat  build.sh
engine/headers/: globalValue.h
engine/headers/EntityManager/: EntityManager.h
engine/headers/camera/: camera.h
engine/headers/ecs/: componentStorage.h  entityManager.h
engine/headers/framebuffer/: framebuffer.h
engine/headers/gameObject/: color.h  gameObject.h
engine/headers/input/: input.h  keycode.h
engine/headers/mesh/: mesh.h  meshFactory.h
engine/headers/model/: model.h
engine/headers/platform/: platform.h
engine/headers/renderer/: renderer.h
engine/headers/resourceManager/: resourceManager.h
engine/headers/scene/: scene.h  sceneManager.h
engine/headers/shader/: shader.h
engine/headers/texture/: texture.h
engine/headers/transform/: transform.h
engine/include/: XEngine.h  application.h  defines.h
engine/src/: application.cpp  camera.cpp  engine.cpp  framebuffer.cpp  gameObject.cpp  input.cpp  mesh.cpp  meshFactory.cpp  model.cpp  platform.cpp  renderer.cpp  resourceManager.cpp  scene.cpp  sceneManager.cpp  shader.cpp  texture.cpp
engine/src/shaders/: fragment.fs  framebuffer.fs  vertex.vs
project/assets/Scripts/: game.lua
project/scenes/: 3D!.json  Light.json  scene.json
project/shaders/: bloom.fs  cubemap.fs  depth_render.fs  lighting.fs  lighting.vs  postProcessing.fs  shadowmap.vs  skybox.fs  skybox.vs
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Core/: Application.cpp  Application.h  Console.h  EngineState.h  FileManager.cpp  FileManager.h  GizmoManager.cpp  GizmoManager.h  Global.h  Material.h  MaterialManager.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Scripting.cpp  Scripting.h  SkyBox.h  UiDgenerator.cpp  UiDgenerator.h
src/Entities/: AreaLight.h  Circle.cpp  CircleObject.h  Cube.h  Entity.h  EntityFactory.h  Light.h  MeshComponent.h  Rectangle.cpp  Rectangle.h  SceneObject.h  Shape.h  Sphere.h  SpotLight.h
src/Renderer/: Renderer.cpp  Renderer.h
testbed/: build.bat  build.sh
testbed/src/: main.cpp
